fix: menu on collapse

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -101,6 +101,11 @@
     #app {
         flex-direction: column-reverse;
     }
+
+    #app.collapsed #menu {
+        width: 100%;
+    }
+
     #menu {
         width: 100%;
         height: 84px;
